Tue Apr 9 12:52:30 CEST 2002 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htnet/HtCookie.cc: fixed a bug regarding expiry date recognition

Fri Apr  5 14:08:39 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalTransport.cc (Request): Fixed to strip CR from
	header lines, output header lines with -vvv.

Tue Mar 19 08:40:54 CET 2002 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtCookie.cc: enhanced controls regarding the expires setting
	when no expires is returned. Prevents NULL pointer exceptions to be
	arisen.

Mon Mar 18 11:28:02 CET 2002 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htlib/HtDateTime.h: added the copy constructor
	* htnet/HtCookie.cc: fixed a NULL pointer bug regarding 'datestring'
	management and HtDateTime copy constructor is now used

Tue Mar 12 18:19:49 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/HtDateTime.cc (Parse, SetFTime): Added Parse method for
	more flexible parsing of LOOSE/SHORT formats, use it in SetFTime.
	Also skip unexpected leading spaces in SetFTime, as these frequently
	cause problems with some strptime() implementations.

Mon Feb 11 23:28:37 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.h (got_redirect): Add referer to properly handle
	broken links through a redirect as reported by Joe Jah.

	* htdig/Retriever.cc: As above.

	* htdig/Document.cc (Retrieve): Fix bug that prevented external
	transport methods from reporting redirects as reported by Jamie
	Anstice <Jamie.Anstice@sli-systems.com>.
	
	* htlib/Dictionary.cc (hashCode): Trial of hash function suggested
	by Jamie Anstice.

Sat Feb  9 18:06:29 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/DocMatch.[h,cc]: Add scoring code for the new htsearch
	framework.

Thu Feb  7 11:32:14 2002  Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtHTTP.cc (ReadChunkedBody): gets control of Read_Line
	methods (return error when they fail).
