@@ -15,6 +15,7 @@
 //
 // See "PERSISTENT CLIENT STATE HTTP COOKIES" Specification
 // at http://www.netscape.com/newsref/std/cookie_spec.html
+// Modified according to RFC2109 (max age and version attributes)
 //
 ///////
 //
@@ -25,7 +26,7 @@
 // or the GNU Public License version 2 or later
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: HtCookieJar.cc,v 1.2 2002/02/02 18:18:13 ghutchis Exp $ 
+// $Id: HtCookieJar.cc,v 1.3 2002/04/09 14:43:58 angusgb Exp $ 
 //
 
 #include "HtCookieJar.h"
@@ -40,13 +41,25 @@
 ///////
    // 	 Writes the HTTP request line given a cookie
 ///////
+   //
+   // RFC2109: The syntax for the header is:
+   // cookie          =       "Cookie:" cookie-version
+   //                         1*((";" | ",") cookie-value)
+   // cookie-value    =       NAME "=" VALUE [";" path] [";" domain]
+   // cookie-version  =       "$Version" "=" value
+   // NAME            =       attr
+   // VALUE           =       value
+   // path            =       "$Path" "=" value
+   // domain          =       "$Domain" "=" value
+   //
+
 
 int HtCookieJar::WriteCookieHTTPRequest(const HtCookie &Cookie,
    String &RequestString, const int &NumCookies)
 {
    // Writes the string to be sent to the web server
    if (NumCookies == 1)
-      RequestString << "Cookie: ";
+      RequestString << "Cookie: $Version=\"1\"; ";
    else
       RequestString << "; " ;
 
@@ -64,6 +77,12 @@ int HtCookieJar::WriteCookieHTTPRequest(const HtCookie &Cookie,
 	 
    // Prepare cookie line for HTTP protocol
    RequestString << Cookie.GetName() << "=" << Cookie.GetValue();
+
+   if (Cookie.GetPath().length() > 0)
+      RequestString << " ;$Path=" << Cookie.GetPath();
+
+   if (Cookie.GetDomain().length() > 0)
+      RequestString << " ;$Domain=" << Cookie.GetDomain();
 
    return true;
       
